# movie-insights-pipeline

./: .gitattributes  Makefile  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: check-all.yml
config/kafka-ui/: dynamic_config.yaml
config/prometheus/: prometheus.yml
experiments/: message-parsing.ipynb
scripts/: init-buckets.sh  init-kafka.sh
services/scene-detector/: .dockerignore  Dockerfile  pyproject.toml  readme.md
services/scene-detector/experiments/: scene_similarity_examples.ipynb
services/scene-detector/scene_detector/: __main__.py  entities.py  fingerprint.py  id_assigner.py  main.py  s3.py  scenes.py  settings.py  telemetry.py
services/scene-detector/scene_detector/storage/: redis_scene_index.py  scene_index.py
services/scene-detector/tests/: conftest.py  in_memory_scene_index.py
services/scene-detector/tests/e2e/: test_end_to_end.py
services/scene-detector/tests/fixtures/: video_chunks.jsonl
services/scene-detector/tests/fixtures/outputs/: output_messages.jsonl
services/scene-detector/tests/integration/: test_edge_case.py  test_redis_scene_index.py
services/scene-detector/tests/unit/: test_fingerprint.py  test_id_assigner.py  test_scene_detector.py
services/scene-manager/: Dockerfile  Makefile  pyproject.toml  readme.md
services/scene-manager/scene_manager/: __main__.py  entities.py  local_merger.py  processor.py  scene_merger.py  settings.py
services/scene-manager/tests/: conftest.py
services/scene-manager/tests/e2e/: test_end_to_end.py
services/scene-manager/tests/fixtures/: scene_messages.jsonl
services/scene-manager/tests/fixtures/inputs/: scene_messages.jsonl
services/scene-manager/tests/integration/: test_scene_merger.py
services/system-view/: Dockerfile  pyproject.toml
services/system-view/system_view/: kafka_connections.py  main.py  models.py  settings.py  websocket_manager.py
services/system-view/system_view/static/: app.js  index.html  styles.css
services/video-chunker/: .gitignore  Dockerfile  Makefile  pyproject.toml  readme.md
services/video-chunker/tests/: conftest.py
services/video-chunker/tests/e2e/: test_end_to_end.py
services/video-chunker/tests/fixtures/: smallest_upload_response.json
services/video-chunker/tests/integration/: test_s3_client.py
services/video-chunker/tests/unit/: test_chunking.py
services/video-chunker/video_chunker/: __main__.py  chunking.py  main.py  settings.py
test/: test_full_system.py
tests/: pyproject.toml  test_full_system.py
tests/fixtures/: merged_scenes.jsonl  scene_messages.jsonl  video_chunks.jsonl
video-chunker/: Dockerfile  Makefile  main.py  pyproject.toml  readme.md  result.json
video-chunker/tests/: conftest.py
video-chunker/tests/e2e/: test_end_to_end.py
video-chunker/tests/fixtures/: smallest_upload_response.json
video-chunker/tests/integration/: test_s3_client.py
video-chunker/tests/unit/: test_chunking.py
video-chunker/video_chunker/: __main__.py  chunking.py  main.py  s3.py  settings.py
