[project]
name = "movie-insights-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.11.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "pytest-docker>=3.2.3",
    "ruff>=0.12.10",
]

[tool.ruff]
line-length = 120
exclude = [".git", ".venv"]

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "C90", # mccabe (we are not ready)
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "FBT", # flake8-boolean-trap
    "I", # isort
    "N", # pep8-naming
    "PIE", # flake8-pie
    "PL", # pylint
    "SIM", # flake8-simplify
    "UP", # pyupgrade
    "YTT", # flake8-2020
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D203", # One blank line before class
    "D212", # Multiline summary second line
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "B011", # Do not `assert False`
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class 
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in `__init__`
    "D203", # One blank line before class
    "D212", # Multiline summary second line
    "PLR2004", # Magic value used in comparison, consider replacing `X` with a constant variable
    "PLR0913", # Too many arguments in function definition
]
"experiments/**" = ["ALL"]
